<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cse110.flashbackmusicplayer.AlbumActivity"
    tools:showIn="@layout/activity_album">

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abhaya_libre_bold"
        android:textColor="@android:color/background_light"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_cover" />

    <TextView
        android:id="@+id/songAlbum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/abhaya_libre_bold"
        android:textColor="@android:color/background_light"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songTitle" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/backwhite"
        android:fontFamily="@font/abhaya_libre_bold"
        android:gravity="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/desc"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="180dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="20dp"
        android:alpha="0.7"
        android:background="@drawable/pausewhite"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTrack" />

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abhaya_libre_bold"
        android:text=""
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fav_dis_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/neutralwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/slideTrack"
        android:layout_width="0dp"
        android:progressDrawable="@drawable/custom_seekbar"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songAlbum" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="188dp"
        android:layout_marginEnd="132dp"
        android:layout_marginTop="25dp"
        android:alpha="0.7"
        android:background="@drawable/nextwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTrack" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ListView
            android:id="@+id/track_list"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="500dp"
            android:background="@drawable/custom_button"
            android:scrollbars="vertical"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

