<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0a113e"
    tools:context="com.cse110.flashbackmusicplayer.MainActivity">

    <Button
        android:id="@+id/switchMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/abhaya_libre_bold"
        android:text="Enter Vibe Mode"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tracksDisplayButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/abhaya_libre_bold"
        android:text="Tracks"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/albumsDisplayButton"
        app:layout_constraintTop_toBottomOf="@+id/switchMode" />

    <Button
        android:id="@+id/albumsDisplayButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/abhaya_libre_bold"
        android:text="Albums"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/tracksDisplayButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchMode" />

    <Spinner
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/listViews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracksDisplayButton" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/listViews"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracksDisplayButton">

        <ListView
            android:id="@+id/albumsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:divider="#244a54"
            android:dividerHeight="1dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/songsView" />

        <ListView
            android:id="@+id/songsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:divider="#244a54"
            android:dividerHeight="1dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/albumsView"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
